--- a/config.toml
+++ b/config.toml
@@ -11,10 +11,10 @@ arch = "arm64-v8a"
 
 [YouTube]
 build-mode = "both"
+excluded-patches = ""
+included-patches = ""
 version = "auto"
-apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube/"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.youtube"
-arch = "arm64-v8a"
 
 [Messenger]
 build-mode = "both"
